@@ -239,6 +239,7 @@ See $1.',
 'newmessageslink' => 'new messages',
 'newmessagesdifflink' => 'diff to penultimate revision',
 'editsection'=>'edit',
+'editsectionhint' => 'Edit section: $1',
 'toc' => 'Contents',
 'showtoc' => 'show',
 'hidetoc' => 'hide',
