@@ -676,6 +676,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 5141) Gracefully handle the new account link when createaccount off
 * (bug 5150 and related) Fix missing ID attribute in HTML namespace selector
 * (bug 5152) Proper HTML escaping on subpage breadcrumbs
+* (bug 4855) Section edit links now have the section name in the title attribute.
 
 
 === Caveats ===
